add findByEngagementId method #miw-upm/goa#107